samples/_failures_safe/1761216157_109e1e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28d3adae.c: In function ‘main’:
./samples/SAFE/__tmp_28d3adae.c:139:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  139 |         LogEntry parsed
      |         ^~~~~~~~
./samples/SAFE/__tmp_28d3adae.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_28d3adae.c:139:9: error: expected declaration or statement at end of input
